deploy/juiceshop/juiceshop-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: juiceshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: juiceshop
  template:
    metadata:
      labels:
        app: juiceshop
        admission.datadoghq.com/cws-instrumentation.enabled: "true"
    spec:
      containers:
        - name: juiceshop
          image: ghcr.io/datadog/juice-shop:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 15
