deploy/juiceshop/juiceshop-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: juiceshop
spec:
  selector:
    app: juiceshop
  ports:
    - port: 8081
      targetPort: 3000
  type: ClusterIP
